css/product-main-general.css
@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Quicksand&family=Varela+Round&display=swap');

.product-main {
    min-height: 80vh;
    margin-top: 8vh;
    display: flex;
    align-items: center;
}

.product-container {
    padding: 10vh 0;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    align-content: center;
}

.info-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 25px;
    width: 40%;
    text-align: justify;
}

.info-container h1 {
    font-family: 'Varela Round', sans-serif;
    letter-spacing: 2px;
}

.info-container {
    font-family: 'Comfortaa', sans-serif;
}

.carrousel-container {
    width: 40vw;
    height: 50vh;
    display: flex;
    align-items: center;
}

.material-symbols-outlined {
    font-variation-settings:
    'FILL' 0,
    'wght' 400,
    'GRAD' 0,
    'opsz' 24;
    position: relative;
    user-select: none;
}

#arrow-left {
    left: 40px;
}

#arrow-right {
    right: 40px;
}

.material-symbols-outlined {
    cursor: pointer;
}

.product-container-image {
    object-fit: contain;
    height: 100%;
    min-width: 100%;
}

.characteristics-list {
    padding-left: 20px;
    max-width: 100%;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: space-around;
    gap: 20px;
    margin-top: 30px;
    text-align: left;
}

.characteristics-list li {
    text-align: justify;
}

.button-buy {
    display: flex;
    margin-top: 50px;
}

.button-buy button {
    font-family: 'Varela Round', sans-serif;
    letter-spacing: 2px;
    padding: 12px 40px;
    border-radius: 12px;
    width: max-content;
    font-size: 16px;
    cursor: pointer;
    text-transform: uppercase;
    font-weight: bold;
    outline: none;
    border: none;
}

@media only screen and (max-width: 800px) {
    .product-container {
        width: 90%;
        margin: 0 auto;
        flex-direction: column;
        align-items: center;
        gap: 50px;
    }

    .carrousel-container {
        width: 100%;
    }

    .product-container-image {
        height: 40vh;
        width: 100%;
    }

    .characteristics-list {
        align-items: center;
    }

    .info-container {
        width: 100%;
    }

    .info-container h1 {
        text-align: center;
    }

    .material-symbols-outlined {
        position: absolute;
    }

    #arrow-left {
        left: 20px;
    }
    
    #arrow-right {
        right: 20px;
    }

    .button-buy {
        width: max-content;
        margin: 50px auto;
        
    }
}

